# lookfor-qt-ui

./: CMakeLists.txt  build64.cmd  build64.sh  clean.cmd  clean.sh  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
